[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Objects/Bullet.gd" type="Script" id=1]
[ext_resource path="res://assets/rotatingheart.png" type="Texture" id=2]
[ext_resource path="res://assets/sound/heart.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 2.0

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 1
emission_sphere_radius = 4.0
flag_disable_z = true
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color = Color( 0.627451, 0.254902, 0.45098, 1 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 1
emission_sphere_radius = 4.0
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color = Color( 0.8, 0.690196, 0.772549, 1 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "RotatingHeart"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6 ]
}

[node name="Bullet" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 7
region_rect = Rect2( 0, 36, 12, 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Particles2DPink" type="Particles2D" parent="."]
lifetime = 0.3
local_coords = false
process_material = SubResource( 2 )

[node name="Particles2DWhite" type="Particles2D" parent="."]
amount = 5
lifetime = 0.5
local_coords = false
process_material = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "RotatingHeart"
anims/RESET = SubResource( 4 )
anims/RotatingHeart = SubResource( 5 )

[node name="HeartSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
